# oracle

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  setup.sh  test_oracle.py  test_rules.py  test_titanic.py
monce/: __init__.py  formula.py  oracle.py
test/: titanic_analysis.py
