[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monce"
version = "1.0.1"
description = "Question your data. Snake-powered DataFrame intelligence."
requires-python = ">=3.9"
license = "LicenseRef-Proprietary"
authors = [{name = "Charles Dana", email = "cdana@monce.ai"}]
dependencies = []

[project.urls]
Homepage = "https://monce.ai"

[tool.hatch.build.targets.wheel]
packages = ["monce", "algorithmeai"]
